--- a/components/crn-rating.components.json
+++ b/components/crn-rating.components.json
@@ -8,7 +8,7 @@
   "category": [
     "BUTTONS"
   ],
-  "wrapper": false,
+  "wrapper": true,
   "autoWrapper": false,
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/rating.template.html",
   "properties": {
@@ -52,6 +52,11 @@
       "type": "options",
       "target": "class",
       "values": [
+        {
+          "key": "color-theme",
+          "value_pt_BR": "Padrão do tema",
+          "value_en_US": "Theme pattern"
+        },
         {
           "key": "color-white",
           "value_pt_BR": "Branco",
@@ -183,27 +188,27 @@
     {
       "name": "icon-size",
       "type": "options",
-      "target": "style",
+      "target": "class",
       "values": [
         {
-          "key": "font-size: 20px;",
-          "value_pt_BR": "Padrão",
-          "value_en_US": "Default"
+          "key": "font-size-theme",
+          "value_pt_BR": "Padrão do tema",
+          "value_en_US": "Theme pattern"
         },
         {
-          "key": "font-size: 47px;",
-          "value_pt_BR": "Grande",
-          "value_en_US": "Big"
+          "key": "font-size-20",
+          "value_pt_BR": "Pequeno",
+          "value_en_US": "Small"
         },
         {
-          "key": "font-size: 30px;",
+          "key": "font-size-30",
           "value_pt_BR": "Médio",
           "value_en_US": "Medium"
         },
         {
-          "key": "font-size: 25px;",
-          "value_pt_BR": "Pequeno",
-          "value_en_US": "Small"
+          "key": "font-size-47",
+          "value_pt_BR": "Grande",
+          "value_en_US": "Big"
         }
       ]
     }
@@ -260,6 +265,12 @@
       "type": "text",
       "order": 4
     },
+
+
+
+
+
+
     {
       "name": "ng-init",
       "selector": "cronapp-rating",
