CRONAPP-4951 - Ajustar componente menu dinâmico para novos temas

--- a/components/crn-dynamic-menu.components.json
+++ b/components/crn-dynamic-menu.components.json
@@ -11,7 +11,8 @@
     "LAYOUTS"
   ],
   "order": 11,
-  "wrapper": true,
+  "wrapper": false,
+  "autoWrapper": true,
   "designTimeDynamic": true,
   "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/cron-dynamic-menu.designtime.html",
   "designTimeSelector": "cron-dynamic-menu",
