CRONAPP-4953 - Ajustar componente entrada de texto com botão para novos temas

--- a/components/crn-button.components.json
+++ b/components/crn-button.components.json
@@ -85,8 +85,8 @@
             "values": [
                 {
                     "key": "btn-default",
-                    "value_pt_BR": "Padrão",
-                    "value_en_US": "Default"
+                    "value_pt_BR": "Padrão do tema",
+                    "value_en_US": "Theme pattern"
                 },
                 {
                     "key": "btn-primary",
@@ -129,6 +129,11 @@
             "type": "options",
             "target": "class",
             "values": [
+                {
+                    "key": "color-theme",
+                    "value_pt_BR": "Padrão do tema",
+                    "value_en_US": "Theme pattern"
+                },
                 {
                     "key": "color-white",
                     "value_pt_BR": "Branco",
