--- a/components/crn-carousel.components.json
+++ b/components/crn-carousel.components.json
@@ -18,7 +18,7 @@
     }
   },
   "forcedGroup": false,
-  "wrapper": false,
+  "wrapper": true,
   "handleRules": {
     "canOrder": true,
     "canActivate": true,
