--- a/components/cron-breadcrumbs.components.json
+++ b/components/cron-breadcrumbs.components.json
@@ -21,6 +21,52 @@
     },
     "id": {
       "order": 1
+    },
+    "crn-delimiter-icon": {
+      "displayName_pt_BR": "Tema do botão",
+      "displayName_en_US": "Button theme"
     }
-  }
+  },
+  "attributesForPreview": [
+    {
+      "name": "crn-delimiter-icon",
+      "type": "options",
+      "target": "class",
+      "values": [
+        {
+          "key": "arrow-chevron-right",
+          "value_pt_BR": "Seta",
+          "value_en_US": "Arrow"
+        },
+        {
+          "key": "line",
+          "value_pt_BR": "Linha",
+          "value_en_US": "Line"
+        }
+      ]
+    }
+  ],
+  "childrenProperties": [
+    {
+      "name": "id-menu",
+      "selector": "cron-breadcrumbs",
+      "displayName_pt_BR": "Identificador do menu",
+      "displayName_en_US": "Menu id",
+      "type": "text"
+    },
+    {
+      "name": "components",
+      "selector": "cron-breadcrumbs",
+      "displayName_pt_BR": "Teste",
+      "displayName_en_US": "Test",
+      "type": "componentsList"
+    },
+    {
+      "name": "crn-delimiter-icon",
+      "selector": "cron-breadcrumbs",
+      "displayName_pt_BR": "Ícone delimitador",
+      "displayName_en_US": "Delimiter icon",
+      "order": 3
+    }
+  ]
 }
