--- a/components/cron-breadcrumbs.components.json
+++ b/components/cron-breadcrumbs.components.json
@@ -23,8 +23,8 @@
       "order": 1
     },
     "crn-delimiter-icon": {
-      "displayName_pt_BR": "Tema do botão",
-      "displayName_en_US": "Button theme"
+      "displayName_pt_BR": "Ícone delimitador",
+      "displayName_en_US": "Delimiter icon"
     }
   },
   "attributesForPreview": [
@@ -52,21 +52,13 @@
       "selector": "cron-breadcrumbs",
       "displayName_pt_BR": "Identificador do menu",
       "displayName_en_US": "Menu id",
-      "type": "text"
-    },
-    {
-      "name": "components",
-      "selector": "cron-breadcrumbs",
-      "displayName_pt_BR": "Teste",
-      "displayName_en_US": "Test",
-      "type": "componentsList"
+      "type": "componentsList",
+      "mandatory": true
     },
     {
       "name": "crn-delimiter-icon",
-      "selector": "cron-breadcrumbs",
-      "displayName_pt_BR": "Ícone delimitador",
-      "displayName_en_US": "Delimiter icon",
-      "order": 3
+      "selector": "cron-breadcrumbs",      
+      "mandatory": true
     }
   ]
 }
