--- a/components/crn-input-password.components.json
+++ b/components/crn-input-password.components.json
@@ -6,7 +6,8 @@
     "description": "Campo para inserir senha",
     "description_en_US": "Password input field",
     "category": [
-        "INPUTS", "FORMS"
+        "INPUTS",
+        "FORMS"
     ],
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-input-password.svg",
     "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/crn-input-password.template.html",
@@ -28,6 +29,13 @@
             "displayName_pt_BR": "Título",
             "displayName_en_US": "Title",
             "type": "text"
+        },
+        {
+            "name": "ng-disabled",
+            "selector": "input",
+            "displayName_en_US": "Disabled",
+            "displayName_pt_BR": "Desabilitado",
+            "type": "logic"
         },
         {
             "name": "placeholder",
