--- a/components/crn-input-password.components.json
+++ b/components/crn-input-password.components.json
@@ -6,8 +6,7 @@
     "description": "Campo para inserir senha",
     "description_en_US": "Password input field",
     "category": [
-        "INPUTS",
-        "FORMS"
+        "INPUTS", "FORMS"
     ],
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-input-password.svg",
     "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/crn-input-password.template.html",
