CRONAPP-5018 - Falta propriedade de habilitar/desabilitar componente (#810)
* CRONAPP-5018 - Falta propriedade de habilitar/desabilitar componente

--- a/components/crn-input-password.components.json
+++ b/components/crn-input-password.components.json
@@ -30,6 +30,13 @@
             "type": "text"
         },
         {
+            "name": "ng-disabled",
+            "selector": "input",
+            "displayName_en_US": "Disabled",
+            "displayName_pt_BR": "Desabilitado",
+            "type": "logic"
+        },
+        {
             "name": "placeholder",
             "displayName_pt_BR": "Sugestão",
             "displayName_en_US": "Placeholder",
