--- a/components/crn-enterprise-dynamic-combobox.components.json
+++ b/components/crn-enterprise-dynamic-combobox.components.json
@@ -33,6 +33,13 @@
       "type": "text"
     },
     {
+      "name": "cron-disabled",
+      "selector": "cron-auto-complete",
+      "displayName_en_US": "Disabled",
+      "displayName_pt_BR": "Desabilitado",
+      "type": "logic"
+    },
+    {
       "name": "ng-change",
       "selector": "cron-dynamic-select",
       "displayName_pt_BR": "Ao Alterar",
