--- a/components/cron-breadcrumbs.components.json
+++ b/components/cron-breadcrumbs.components.json
@@ -20,11 +20,19 @@
       "order": 9999
     },
     "id": {
-      "order": 1
+      "order": 2,
+      "displayName_pt_BR": "Identificador do componente",
+      "displayName_en_US": "Component id"
     },
     "crn-delimiter-icon": {
+      "order": 3,
       "displayName_pt_BR": "Ícone delimitador",
       "displayName_en_US": "Delimiter icon"
+    },
+    "type-menu": {
+      "order": 1,
+      "displayName_pt_BR": "Tipo de captura",
+      "displayName_en_US": "Capture type"
     }
   },
   "attributesForPreview": [
@@ -44,21 +52,47 @@
           "value_en_US": "Line"
         }
       ]
+    },
+    {
+      "name": "type-menu",
+      "type": "options",
+      "target": "class",
+      "values": [
+        {
+          "key": "idBloco",
+          "value_pt_BR": "via bloco",
+          "value_en_US": "Arrow"
+        },
+        {
+          "key": "idMenu",
+          "value_pt_BR": "via menu",
+          "value_en_US": "Line"
+        }
+      ]
     }
   ],
   "childrenProperties": [
     {
       "name": "id-menu",
-      "selector": "cron-breadcrumbs",
+      "selector": "cron-breadcrumbs.idMenu",
       "displayName_pt_BR": "Identificador do menu",
       "displayName_en_US": "Menu id",
-      "type": "componentsList",
+      "type": "componentsList"
+    },
+    {
+      "name": "type-menu",
+      "selector": "cron-breadcrumbs",
       "mandatory": true
     },
     {
       "name": "crn-delimiter-icon",
-      "selector": "cron-breadcrumbs",      
+      "selector": "cron-breadcrumbs",
       "mandatory": true
+    },
+    {
+      "name": "ng-init",
+      "selector": "cron-breadcrumbs.idBloco",
+      "type": "event"
     }
   ]
 }
