--- a/components/crn-two-container.components.json
+++ b/components/crn-two-container.components.json
@@ -1,7 +1,7 @@
 {
     "name": "crn-two-container",
-    "text_pt_BR": "2 Colunas",
-    "text_en_US": "2 Columns",
+    "text_pt_BR": "2 Colunas (6/6)",
+    "text_en_US": "2 Columns (6/6)",
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-two-container.svg",
     "description": "Dois recipiente ao lado para inserir componentes",
     "description_en_US": "Two container on the side for inserting components",
