--- a/components/cron-ordered-list.components.json
+++ b/components/cron-ordered-list.components.json
@@ -2,14 +2,15 @@
     "name": "cron-ordered-list",
     "text_pt_BR": "Lista ordenada",
     "text_en_US": "Ordered list",
-    "wrapper": false,
-    "image": "/node_modules/cronapp-framework-js/img/cron-icon/cron-ordered-list.svg",
+    "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-ordered-list.svg",
     "description": "Lista em tópicos com indicadores numerados",
     "description_en_US": "List on topics with numbered indicators",
     "category": [
         "LISTS"
     ],
     "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/components/templates/cron-ordered-list.template.html",
+    "wrapper": false,
+    "forcedGroup": true,
     "properties": {
         "class": {
             "order": 9999
@@ -30,7 +31,6 @@
             "displayName_en_US": "Ordered attribute value"
         }
     },
-    "forcedGroup": true,
     "handleRules": {
         "canOrder": true,
         "canActivate": true,
@@ -40,7 +40,7 @@
                 "activeSelector": "cron-ordered-list ul li.active",
                 "activeClass": "active",
                 "sourceHTML": "<li class=\"item-list\" data-component=\"crn-list-item\" data-replace=\"true\">New item</li>",
-                "targetSelector": "cron-ordered-list ul"
+                "targetSelector": "ul"
             }
         ]
     },
@@ -136,12 +136,12 @@
     ],
     "styles": [
         {
-            "selector": "div#{id} ol.list",
+            "selector": "cron-ordered-list#{id} ul, cron-ordered-list#{id} ol",
             "text_pt_BR": "Plano de fundo",
             "text_en_US": "Background"
         },
         {
-            "selector": "div#{id} ol.list li",
+            "selector": "cron-ordered-list#{id} li",
             "text_pt_BR": "Item da lista",
             "text_en_US": "List item"
         }
