--- a/components/crn-enterprise-combobox-multiple.components.json
+++ b/components/crn-enterprise-combobox-multiple.components.json
@@ -163,7 +163,7 @@
     },
     {
       "name": "cron-disabled",
-      "selector": "cron-select",
+      "selector": "cron-multi-select",
       "displayName_en_US": "Disabled",
       "displayName_pt_BR": "Desabilitado",
       "type": "logic"
